kubernetes/apps/servarr/configs/manifests/abs-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: abs-buffering
  namespace: servarr
spec:
  buffering:
    maxRequestBodyBytes: 0

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: abs-httproute
  namespace: servarr
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "abs.media.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: abs-buffering
    backendRefs:
    - name: audiobookshelf
      port: 13378 

---
