kubernetes/apps/servarr/configs/manifests/prowlarr-traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-httproute
  namespace: servarr
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "prowlarr.media.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prowlarr
      port: 9696

---
