kubernetes/apps/servarr/configs/manifests/sonarr-traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-httproute
  namespace: servarr
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "sonarr.media.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    - name: sonarr
      port: 8989 

---
